Closed
Bug 1955801
Opened 5 months ago
Closed 5 months ago
Fix non-unified build error in SharedMemoryPlatform_mach.cpp on macOS
Categories
(Core :: IPC, defect)
Tracking
()
RESOLVED
FIXED
138 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox136 | --- | unaffected |
firefox137 | --- | unaffected |
firefox138 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
Details
Attachments
(1 file)
Bug 1942129 added a use of PR_BEGIN_MACRO
to SharedMemoryPlatform_mach.cpp, but only included the macro's definition (in prtypes.h) when building for iOS, not macOS.
firefox/ipc/glue/SharedMemoryPlatform_mach.cpp:67:5: error: unknown type name 'PR_BEGIN_MACRO'
67 | LOG_ERROR("Failed to make memory entry (%zu bytes). %s (%x)\n", aSize,
| ^
firefox/ipc/glue/SharedMemoryPlatform_mach.cpp:38:5: note: expanded from macro 'LOG_ERROR'
38 | PR_BEGIN_MACRO \
| ^
Assignee | ||
Comment 1•5 months ago
|
||
Bug 1942129 added a use of PR_BEGIN_MACRO to SharedMemoryPlatform_mach.cpp, but only included the macro's definition (in prtypes.h) when building for iOS, not macOS.
/Users/chris/Code/mozilla/firefox-hg/ipc/glue/SharedMemoryPlatform_mach.cpp:67:5: error: unknown type name 'PR_BEGIN_MACRO'
67 | LOG_ERROR("Failed to make memory entry (%zu bytes). %s (%x)\n", aSize,
| ^
/Users/chris/Code/mozilla/firefox-hg/ipc/glue/SharedMemoryPlatform_mach.cpp:38:5: note: expanded from macro 'LOG_ERROR'
38 | PR_BEGIN_MACRO
| ^
Pushed by cpeterson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b55c5c658150
Fix non-unified build error in SharedMemoryPlatform_mach.cpp on macOS. r=afranchuk
Comment 3•5 months ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•