Bug 1955801 - Fix non-unified build error in SharedMemoryPlatform_mach.cpp on macOS. r=afranchuk

Bug 1942129 added a use of PR_BEGIN_MACRO to SharedMemoryPlatform_mach.cpp, but only included the macro's definition (in prtypes.h) when building for iOS, not macOS.

/Users/chris/Code/mozilla/firefox-hg/ipc/glue/SharedMemoryPlatform_mach.cpp:67:5: error: unknown type name 'PR_BEGIN_MACRO'
   67 |     LOG_ERROR("Failed to make memory entry (%zu bytes). %s (%x)\n", aSize,
      |     ^
/Users/chris/Code/mozilla/firefox-hg/ipc/glue/SharedMemoryPlatform_mach.cpp:38:5: note: expanded from macro 'LOG_ERROR'
   38 |     PR_BEGIN_MACRO                                                 \
      |     ^

Differential Revision: https://phabricator.services.mozilla.com/D242646